[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dom-density-map"
version = "0.1.0"
description = "Text-based DOM density maps for LLM browser automation — 79% fewer tokens than screenshots"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zhimin Zou" },
]
keywords = ["cdp", "chrome", "devtools", "browser", "automation", "llm", "dom", "density"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/protostatis/dom-density-map"
Repository = "https://github.com/protostatis/dom-density-map"

[project.scripts]
dom-density-map = "dom_density_map.core:main"
